--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,13 +22,14 @@
     <%}else{%>
       <span class="right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
     <%}%>
-    
+
         <h2>Quiz<span>: el juego de las preguntas</span></h2>
   </header>
 
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes">Preguntas</a></span>
+    <span><a href="/creditos">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -45,8 +46,8 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
+    <a href="https://github.com/JCQuiroga/quiz">
+      Quiz en GitHub</a>
   </footer>
 </div>
 </body>
